# HDS-OS

./: .gitignore  CHANGELOG.md  CLAUDE.md  FIRST_RUN.md  LANGUAGE_POLICY.md  LICENSE  ORCHESTRATION.md  OS_MANIFEST.md  README.md  REAL_IMPLEMENTATIONS.md  WEB_MODULE.md  WRITE_PATHS.md  __init__.py  api.md  ast_validator.py  benchmark.py  build_config.yaml  decompose_audit.py  deploy_hds_instance.sh  events.py  example.py  exec_path_audit.py  hds_dev_start.sh  mcp_server.py  montecarlo.py  patcher.py  pyproject.toml  requirements_real.txt  scribe.py  start.md  start_hds.ps1  start_hds.sh  start_hds_agent.ps1  start_hds_agent.sh  start_hds_agent_audio.sh  start_hds_agent_silent.sh  start_hds_daemons.ps1  start_hds_daemons.sh  start_hds_smart.sh  start_hds_with_dashboard.ps1  (+4 more)
agent/: NO_MOCK_POLICY.md  __init__.py  agent.py  agent_ai_pipeline.py  agent_tasks.py  ai_experience.py  aivc_controller.py  auto_decompose.py  browser_daemon.py  browser_daemon_real.py  browser_utils.py  build_certify.py  canary_tests.py  conductor.py  cost_router.py  degradation_detector.py  doc_daemon.py  fallback_model_chain.py  hibernation_daemon.py  knowledge_gatekeeper.py  microkernel_ipc.py  model_advisor.py  model_router.py  model_scan.py  orchestrator_index.py  pipeline_helpers.py  port_checker.py  port_registry.py  progressive_trust.py  protocol_diagnostic.py  protocol_enforcer.py  run_ui_agent.sh  shadow_verifier.py  sysmon.py  task_bridge.py  task_yaml_support.py  token_wallet.py  universal_ai_interface.py  vision.py  vision_daemon.py  (+9 more)
ai-mind/: orchestrator_index.json  soul.md  (+1 more)
(+131 files in other folders)
