[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hds-os"
version = "1.1.0"
description = "Autonomous AI-containment OS: turn any LLM into a bounded, verified executor."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Non-Commercial (see LICENSE)" }
authors = [
  { name = "Denys Uvarov" },
  { name = "Mykyta Aleksandrov" },
  { name = "Valentyna Halushko" },
  { name = "NGO Ukrainian Association of Innovative Technologies" },
]
keywords = ["llm", "agent", "ai-safety", "containment", "sandbox", "guardrails", "local-llm"]
dependencies = []   # kernel is pure stdlib; daemons/API need extras below

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
daemons = ["selenium", "requests"]

[project.urls]
Homepage = "https://github.com/uvarovdenys-beep/HDS-OS"

[tool.setuptools]
# core/ IS the repo root when published standalone
py-modules = ["scribe", "ast_validator", "write_path_audit", "events", "benchmark"]
packages = ["agent", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
